--- a/README.md.html
+++ b/README.md.html
@@ -37,7 +37,7 @@ div { overflow: auto; }
 <p>Pour l'exercice, je veux reprendre un ancien dev sur l'ajax en JS : <a href="http://ianasheu.free.fr/video" target="_blank">http://ianasheu.free.fr/video</a>. La page d'origine permet des recherches sur des films. La future page sera faite avec React. Le premier travail procède en un découplage d'avec la base de données. Pour cela, plutôt que d'utiliser un framework, j'ai envie de développer l'api rest moi-même en php afin de couvrir les problématiques.</p>
 <br>
 <h2>SCHEMA RELATIONNEL DE LA BASE DE DONNEES</h2>
-<div><img src="https://www.ianasheu.com/video/video-api-bdd-schema.png" title="video-api-bdd-schema.png" alt="video-api-bdd-schema.png"></div>
+<div><img src="./video-api-bdd-schema.png" title="video-api-bdd-schema.png" alt="video-api-bdd-schema.png"></div>
 <blockquote>
 <p><em>video-api-bdd-schema.png</em></p>
 <br>
@@ -112,7 +112,7 @@ div { overflow: auto; }
 <p>Afin de limiter les messages d'erreur, la base de données est configurée pour tronquer les données si elles dépassent la taille du champ cible.</p>
 <br>
 <h2>DIAGRAMME DE CLASSES UML DU CODE PHP DE L'API</h2>
-<div><img src="https://www.ianasheu.com/video/video-api-uml.drawio.svg" title="video-api-uml.drawio.svg" alt="video-api-uml.drawio.svg"></div>
+<div><img src="./video-api-uml.drawio.svg" title="video-api-uml.drawio.svg" alt="video-api-uml.drawio.svg"></div>
 <blockquote>
 <p><em>video-api-uml.drawio.svg</em></p>
 </blockquote>
