--- a/README.md.html
+++ b/README.md.html
@@ -159,7 +159,8 @@ window.onload = function() {
 <p>Commentaires : Le type des propriétés de classe n'est pas renseigné s'il est scalaire (booléen, entier, nombre décimal, chaîne de caractères). En revanche, il est renseigné si c'est un tableau ou un objet. Il en sera de même pour les types des arguments des méthodes de classe ainsi que les types de valeur de retour. De plus, le type de retour d'une méthode qui ne retourne rien sera indique avec void (sauf pour les constructeurs). C'est proche du mode strict.</p>
 <p>Limitations : Il n'y a pas de version ni de cache. Sont absents de l'archive les fichiers Controllers/users_config.php et Models/db_config_ovh.php. De plus, sont aussi absents du diagramme les fichiers .htaccess, index.php, Autoloader.php, Models/MovieItemModel.php, Models/DirectorItemModel.php, Models/CategoryItemModel.php et Views/json_view.php.</p>
 <blockquote>
-<p>sources : <a href="https://github.com/ianasheu/video-api/archive/refs/heads/main.zip" target="_blank">video-api-main.zip</a></p>
+<p>Dépot GitHub : <a href="https://github.com/ianasheu/video-api/" target="_blank">ianasheu/video-api</a></p>
+<p>Téléchargement : <a href="https://github.com/ianasheu/video-api/archive/refs/heads/main.zip" target="_blank">video-api-main.zip</a></p>
 </blockquote>
 <br>
 <h2>DESCRIPTION DES APPELS</h2>
