--- a/README.md.html
+++ b/README.md.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/ico" href="./favicon.ico">
 <title>README.md</title>
 <meta name="description" content="ianasheu.com">
 <meta name="author" content="contact@ianasheu.com">
 <style>
-html, body { font-family: sans-serif; color: #44444; background-color: #F8F8F8; }
-body { width:96%; margin-left:auto; margin-right:auto; }
+html, body { font-family: sans-serif; color: #181818; background-color: #F8F8F8; padding: 0; margin: 0; }
+body { padding: 1rem 2rem; margin-left:auto; margin-right:auto; }
 h1 { text-shadow: 2px 3px 1px #E0E0E0; }
 pre { color: #00000; background-color: #E4E8EC; border-left: 2px #C4C8CC solid; overflow-x: auto; }
 div { overflow: auto; }
